<resources>
    <string name="app_name">PLUM</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="usuario">Usuário</string>
    <string name="ameixa">ameixa</string>
    <string name="camera">Abrir Camera</string>
    <string name="vazio"> </string>
    <string name="lista">Adicionar Item</string>
    <string name="notificações">Notificações</string>
    <string name="sino">sino</string>
    <string name="listas">Listas</string>
    <string name="add">Quantidade</string>
    <string name="not1">Leite vence amanhã</string>
    <string name="not2">Tomar remédio em 2 horas</string>
    <string name="not3">Comprar Açucar</string>
    <string name="not4">Comprar Arroz</string>
    <string name="lista1">Lista de comidas</string>
    <string name="lista2">Lista de remédios</string>
    <string name="comida">Alimentos</string>
    <string name="remedio">Remédios</string>

</resources>