<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <Button
        android:id="@+id/voltar"
        android:layout_width="52dp"
        android:layout_height="51dp"
        android:background="#9C27B0"
        app:backgroundTint="#673AB7"
        app:icon="?attr/actionModeCloseDrawable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:text="@string/vazio" />

    <Button
        android:id="@+id/camera_button"
        android:layout_width="156dp"
        android:layout_height="61dp"
        android:background="#9C27B0"
        android:text="@string/camera"
        app:backgroundTint="#673AB7"
        app:icon="@android:drawable/ic_menu_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.607"
        app:strokeColor="#000000" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etItem"
        android:layout_width="144dp"
        android:layout_height="56dp"
        android:hint="@string/lista"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382" />

    <Button
        android:id="@+id/add"
        android:layout_width="60dp"
        android:layout_height="65dp"
        android:text="@string/vazio"
        app:backgroundTint="#4CAF50"
        app:icon="@android:drawable/ic_menu_add"
        app:layout_constraintBottom_toTopOf="@+id/camera_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etQuant"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/etQuant"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:autofillHints="@string/add"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/add"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382" />

    <EditText
        android:id="@+id/etPreco"
        android:layout_width="100dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="Preço"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382" />

</androidx.constraintlayout.widget.ConstraintLayout>